# psql-backup

./: .example.db.json  .example.env  .gitignore  README.md  example.db.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
